# auto-x

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  contracts.md  requirements.md
docs/plans/: 2026-03-09-bot-api-mode.md
docs/superpowers/plans/: 2026-03-30-unified-logging-plan.md  2026-03-31-source-ingest.md
docs/superpowers/specs/: 2026-03-30-multi-endpoint-routing-design.md  (+2 more)
processors/downloader/: README.md  download.py  reply_template.md  ytdlp.py
processors/examples/: README.md
sources/examples/: README.md
tele/: __init__.py  async_queue.py  batch_picker.py  batcher.py  bot_client.py  cli.py  client.py  config.py  executor.py  filter.py  log.py  output.py  retry.py  source_consumer.py  source_state.py  source_watcher.py  state.py  tasks.py
tests/: integration_manual.py  test_async_queue_integration.py  test_batch_picker.py  test_batcher.py  test_bot_client.py  test_bot_integration.py  test_bot_state.py  test_cli_ingest.py  test_cli_interaction_queue.py  test_config.py  test_downloader.py  test_executor.py  test_filter.py  test_ingest_integration.py  test_integration.py  test_log.py  test_output.py  test_persistence.py  test_retry.py  test_retry_cross_chat.py  test_source_consumer.py  test_source_state.py  test_source_watcher.py  test_state.py  test_ytdlp_metadata.py
tests/acceptance/: test_cli_contract.py  test_daemon_resilience.py  test_processor_contract.py  test_state_contract.py
user-manual/: README.md  basic-usage.md  configuration.md  examples.md  filter-guide.md  getting-started.md
(+8 files in other folders)
