[project]
name = "tele"
version = "0.1.0"
description = "Telegram message processing pipeline tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.28.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
tele = "tele.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]